--- a/Laptop_Data_Project_Web.ipynb
+++ b/Laptop_Data_Project_Web.ipynb
@@ -67,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('C:\\\\Users\\\\Asus\\\\Documents\\\\A_Data\\\\laptopData.csv')"
+    "df = pd.read_csv('laptopData.csv')"
    ]
   },
   {
